<resources>
    <string name="app_name">Salutem</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_running">Running</string>
    <string name="distance_ran">Distance Ran (in Miles)</string>
    <string name="running">Running</string>
    <string name="exercise">Exercise</string>
    <string name="biking">Biking</string>
    <string name="edit_button">Edit</string>
    <string name="distance_run_in_miles">Distance Run (in Miles)</string>
    <string name="distance_biked_value">8.2</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="distance_ran_value">1.2</string>
    <string name="running_calories_burned_value">125</string>
    <string name="distance_biked_in_miles">Distance Biked (in Miles)</string>
    <string name="exercise_calories_burned_value">100</string>
    <string name="time_exercised_today_value">45</string>
    <string name="time_exercised_today_in_minutes">Time Exercised Today (in Minutes)</string>
    <string name="biking_calories_burned_value">200</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="total_calories_burned_value">425</string>
    <string name="minutes_exercised_today">Minutes Exercised Today</string>
    <string name="minutes_exercised_today_value">60</string>
    <string name="profile">Profile</string>
    <string name="community">Community</string>
    <string name="save_button">Save</string>
    <string name="total_time_run">Total Time Run (in Minutes)</string>
    <string name="total_time_run_value">15</string>
    <string name="title_activity_sub_running">sub_running</string>
    <string name="title_activity_sub_exercise">sub_exercise</string>
    <string name="title_activity_sub_biking">sub_biking</string>
    <string name="total_time_bike">Total Biking Biked (in Minutes)</string>
    <string name="total_time_bike_value">20</string>
    <string name="dist_run">com.example.salutem.dist_run</string>
    <string name="cals_run">com.example.salutem.cals_run</string>
    <string name="time_run">com.example.salutem.time_run</string>
    <string name="time_exe">com.example.salutem.time_exe</string>
    <string name="cals_exe">com.example.salutem.cals_exe</string>
    <string name="dist_bik">com.example.salutem.dist_bik</string>
    <string name="cals_bik">com.example.salutem.cals_bik</string>
    <string name="time_bik">com.example.salutem.time_bik</string>
    <string name="total_cals_burned">com.example.salutem.total_cals_burned</string>
    <string name="total_mins_exe">com.example.salutem.total_mins_exe</string>
    <string name="daily_calories_target">com.example.salutem.daily_calories_target</string>
    <string name="daily_calories_consumed">com.example.salutem.daily_calories_consumed</string>
    <string name="daily_calories_remaining">com.example.salutem.daily_calories_remaining</string>
    <string name="current_recommended_meal">com.example.salutem.current_recommended_meal</string>
    <string name="daily_minutes_meditated">com.example.salutem.daily_minutes_meditated</string>
    <string name="latest_mood_entry">com.example.salutem.latest_mood_entry</string>
    <string name="login_button">Login</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="login_welcome">Welcome to Salutem!</string>
    <string name="view">View</string>
    <string name="diet">Diet</string>
    <string name="daily_caloric_target">Daily Caloric Target</string>
    <string name="calories_consumed_today">Calories Consumed Today</string>
    <string name="calories_remaining_today">Calories Remaining Today</string>
    <string name="recommended_meal">Recommended Meal</string>
    <string name="blank"></string>
    <string name="mental_health">Mental Health</string>
    <string name="minutes_meditated_today">Minutes Meditated Today</string>
    <string name="zero">0</string>
    <string name="latest_mood">Latest Mood</string>
    <string name="no_entry">No Entry</string>
    <string name="breakfast">Breakfast</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein (in grams)</string>
    <string name="carbs">Carbs (in grams)</string>
    <string name="fat">Fat (in grams)</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="summary">Summary Statistics</string>
    <string name="break_cals">com.example.salutem.break_cals</string>
    <string name="break_pro">com.example.salutem.break_pro</string>
    <string name="break_carbs">com.example.salutem.break_carbs</string>
    <string name="break_fat">com.example.salutem.break_fat</string>
    <string name="lunch_cals">com.example.salutem.lunch_cals</string>
    <string name="lunch_pro">com.example.salutem.lunch_pro</string>
    <string name="lunch_carbs">com.example.salutem.lunch_carbs</string>
    <string name="lunch_fat">com.example.salutem.lunch_fat</string>
    <string name="dinner_cals">com.example.salutem.dinner_cals</string>
    <string name="dinner_pro">com.example.salutem.dinner_pro</string>
    <string name="dinner_carbs">com.example.salutem.dinner_carbs</string>
    <string name="dinner_fat">com.example.salutem.dinner_fat</string>
    <string name="total_cals">com.example.salutem.total_cals</string>
    <string name="total_pro">com.example.salutem.total_pro</string>
    <string name="total_carbs">com.example.salutem.total_carbs</string>
    <string name="total_fat">com.example.salutem.total_fat</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="latest_journal_entry">Latest Journal Entry</string>
    <string name="no_journal_entry">No journal entry yet! Start keeping your journal today!</string>
    <string name="enter_journal_entry">Enter new journal entry...</string>
    <string name="meditation">Meditation</string>
    <string name="mood">Mood</string>
    <string name="moo_ent">com.example.salutem.moo_ent</string>
    <string name="jou_ent">com.example.salutem.jou_ent</string>
    <string name="min_med">com.example.salutem.min_med</string>
</resources>
