<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Exercise"
    tools:showIn="@layout/activity_mental">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/mood_tracker"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MentalToMood"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/latest_mood" />

            <TextView
                android:id="@+id/LatestMoodEntry"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_entry"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/latest_journal_entry" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LatestJournalEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/no_journal_entry"
                android:textStyle="italic" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginTop="228dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView50"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/meditation"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MentalToMeditation"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView52"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/minutes_meditated_today" />

            <TextView
                android:id="@+id/MinutesMeditatedToday"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/MentalToProfile"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="530dp"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MentalToCommunity"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="211dp"
        android:layout_marginLeft="211dp"
        android:layout_marginTop="530dp"
        android:text="@string/community"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>