<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Exercise"
    tools:showIn="@layout/activity_exercise">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/running"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit_running"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/distance_run_in_miles"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/DistanceRunning"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance_ran_value"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/calories_burned"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/CaloriesRunning"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/running_calories_burned_value"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exercise"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit_exercise"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/time_exercised_today_in_minutes" />

            <TextView
                android:id="@+id/TimeExercise"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time_exercised_today_value"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/calories_burned" />

            <TextView
                android:id="@+id/CaloriesExercise"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/exercise_calories_burned_value"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/biking"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit_biking"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/distance_biked_in_miles" />

            <TextView
                android:id="@+id/DistanceBiking"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance_biked_value"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/calories_burned" />

            <TextView
                android:id="@+id/CaloriesBiking"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/biking_calories_burned_value"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginTop="410dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_calories_burned"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TotalCaloriesBurned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_calories_burned_value"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/minutes_exercised_today"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TotalMinutesExercised"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/minutes_exercised_today_value"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/ExerciseToProfile"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="530dp"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ExerciseToCommunity"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="211dp"
        android:layout_marginLeft="211dp"
        android:layout_marginTop="530dp"
        android:text="@string/community"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>