<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".sub_biking"
    tools:showIn="@layout/activity_sub_biking">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/biking"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BikingToExercise"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/save_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/distance_biked_in_miles" />

            <EditText
                android:id="@+id/BikingDistanceBiking"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/distance_biked_value"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/calories_burned" />

            <EditText
                android:id="@+id/BikingCaloriesBiking"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/biking_calories_burned_value"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/total_time_bike" />

            <EditText
                android:id="@+id/BikingTimeBiking"
                android:layout_width="150sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/total_time_bike_value"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>