<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    tools:showIn="@layout/activity_login">


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:gravity="center"
            android:text="@string/login_welcome"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/UsernameInput"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:hint="@string/username_input"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:ems="10"
            android:hint="@string/password_input"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>